client/stylesheets/top_bar.css
.navbar {
  font-family: 'Roboto', sans-serif;
  border-radius: 0px;
  background: white;
  border-bottom: 2px solid #1B691B !important;
}
  
#navbar-title {
  color: rgb(138, 205, 138);
  font-weight: bold;
  font-size: 1.8em;
}

#navbar-user {
  font-weight: bold;
}

#search-box {
  border-radius: 0px;
  border-top-width: 1px;
  border-left-width: 1px;
  border-right-width: 1px;
}

